add JTattoo LnFs (licensed GPLv2 or later)